--- a/exchangeRate.yml
+++ b/exchangeRate.yml
@@ -14,6 +14,7 @@ database:
   properties:
     charSet: UTF-8
     hibernate.dialect: org.hibernate.dialect.MySQLInnoDBDialect
+    hibernate.hbm2ddl.auto: validate
   maxWaitForConnection: 1s
   minSize: 8
   maxSize: 32
